# mercury-chat

./: .gitignore  CMakeLists.txt  README.md  README.zh-CN.md  sql.md
.githooks/: pre-push
.github/workflows/: linux-debian.yml  windows.yml
profiles/: a.ini  b.ini
src/: BuildInfo.hpp.in  CatController.cpp  CatController.hpp  ChatProtocol.cpp  ChatProtocol.hpp  MainWindow.cpp  MainWindow.hpp  ModemProcess.cpp  ModemProcess.hpp  SqlLogStore.cpp  SqlLogStore.hpp  TncClient.cpp  TncClient.hpp  main.cpp
tests/: test_chat_protocol.cpp
tools/: package-windows-x64.sh  preflight-check.sh  run-a.sh  run-ab.sh  run-b.sh
